refactor(entry): change fs.Directory and fs.File to more generic fs.Entry
